This file contains changes introduced to PsychXR for each version. Breaking
changes may be incompatible with your current code.

Version 0.2.1 - 2019/07/13
--------------------------

Overview:

    This release adds improved haptics support, adds more features to
    LibOVRPose, and fixes head locking.

New Features:

    - Added `mirrorOptions` to `createMirrorTexture`.
    - Added `getViewMatrix` to `LibOVRPose` which creates view matrices, which
      transforms points into the space of the pose. This allows you to use rigid
      body poses to define eye locations for rendering.
    - Added optional `originPose` to `calcEyePoses`.
    - Added optional bounding boxes to poses. You can test if an object's
      bounding box is visible to a given eye using the new `cullPose` function.
      This allows you to cull meshes associated with poses if they are not
      visible during scene rendering, reducing CPU/GPU workload when drawing
      scenes. Bounding boxes can be created to fit a model's vertices if
      specified, and a single bounding box can be associated with multiple
      poses.
    - Support for haptic buffers for use with Touch controllers. A haptics
      buffer contains an array of samples which specify Touch controller
      vibration amplitudes. Buffers can be passed to the haptics engine for
      playback, permitting custom vibration profiles.

Bug Fixes:

    - Fixed head-locking. Head-locking prevents compositor ASW from acting upon
      the layer. This fix restores the behaviour seen in the alpha releases
      of PsychXR.

Breaking Changes:

    - No breaking API changes.

Known Issues:

    - None


Version 0.2.0 - 2019/07/06
--------------------------

Overview:

    This release bring considerable changes to PsychXR to address issues and
    feedback from the initial public release (0.1.4). This version will break
    compatibility with software running any previous version, see the reference